x-overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   min-height: 100vh;
   position: relative;
   transition: background var(--transition-slow);
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   background: var(--color-bg-primary);
 }
 
